--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -15,7 +15,7 @@ and open the template in the editor.
         <link href="css/cssp.css" rel="stylesheet" type="text/css"
               th:href="@{/css/cssp.css}" />
     </head>
-    <body th:style="'background-image:url(' + @{/images/logoPerfectpay.png} + '); background-repeat: no-repeat, repeat; background-size: cover;'">
+    <body th:style="'background-image:url(' + @{/images/logo.png} + '); background-repeat: no-repeat, repeat; background-size: cover;'">
         <div > 
             <div style="margin-top: 100px;">
                 <h3 style="text-align: center"><strong>Paiement effectué avec succès</strong></h3>
