--- a/src/main/resources/templates/cancel.html
+++ b/src/main/resources/templates/cancel.html
@@ -12,10 +12,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../src/main/resources/static/css/bootstrap.css">
     </head>
-    <body th:style="'background-image:url(' + @{/images/logoPerfectpay.png} + '); background-repeat: no-repeat, repeat; background-size: cover;'">
+    <body th:style="'background-image:url(' + @{/images/logo.png} + '); background-repeat: no-repeat, repeat; background-size: cover;'">
         <div >
             <div style="margin-top: 100px;">
-                <h1 style="text-align: center"><strong>Paiement annulé </strong></h1>
+                <h3 style="text-align: center"><strong>Paiement annulé </strong></h3>
                 <p style="text-align: center"><strong>Veuillez fermer cette page et retourner à l'application</strong></p>
             </div>
         </div>
